privileges/constrainttemplate.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sdisallowprivilegedcontainers
  annotations:
    description: Disallows the use of privileged containers.
spec:
  crd:
    spec:
      names:
        kind: K8sDisallowPrivilegedContainers
      validation:
        openAPIV3Schema:
          type: object
          properties:
            excludedNamespaces:
              type: array
              items:
                type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sdisallowprivilegedcontainers

        violation[{"msg": msg}] {
            # Check 1: Workloads (Deployment, DaemonSet, etc.)
            container_input := input.review.object.spec.template.spec.containers
            container := container_input[_]
            check_privileged(container)

            # Skip if the namespace is excluded
            not exclusion_check(input.review.object.metadata.namespace)

            msg := sprintf("Privileged container is disallowed: Container '%v' in workload '%v' must not set securityContext.privileged to true.", 
                           [container.name, input.review.object.metadata.name])
        }

        violation[{"msg": msg}] {
            # Check 2: Direct Pods
            container_input := input.review.object.spec.containers
            container := container_input[_]
            check_privileged(container)

            # Skip if the namespace is excluded
            not exclusion_check(input.review.object.metadata.namespace)

            msg := sprintf("Privileged container is disallowed: Container '%v' in pod '%v' must not set securityContext.privileged to true.", 
                           [container.name, input.review.object.metadata.name])
        }

        # Helper rule to check for privileged=true in the container's securityContext
        check_privileged(container) {
            container.securityContext.privileged
        }

        # Helper function to check for excluded namespaces
        exclusion_check(namespace) {
          # Get the list of excluded namespaces from the Constraint parameters
          excluded := input.parameters.excludedNamespaces
          # Check if the namespace is in the list of excluded namespaces
          namespace == excluded[_]
        }
